[project]
name = "tetris"
version = "0.1.0"
description = ""
authors = [
    {name = "Leônidas Araújo",email = "leonidasaraujomqm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pygame-ce (>=2.5.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
